# fishbot-test

./: .gitignore  frames_2025-09-24_15.55.52.gv  frames_2025-09-24_17.34.23.gv  frames_2025-09-24_18.01.29.gv  frames_2025-09-25_08.51.38.gv  frames_2025-09-25_08.55.02.gv  frames_2025-09-25_09.02.41.gv  frames_2025-09-25_09.02.46.gv  script.py
src/fishbot_description/launch/: display_rviz2.launch.py  display_wheeled_rviz2.launch.py  gazebo.launch.py  gazebo1.launch.py  gazebo_wheeled.launch.py
src/fishbot_description/world/: fishbot1.world
src/fishbot_fourwheel_odom/: package.xml  setup.cfg  setup.py
src/fishbot_fourwheel_odom/fishbot_fourwheel_odom/: fourwheel_diff_odom_node.py
src/fishbot_fourwheel_odom/launch/: odom.launch.py
src/fishbot_fourwheel_odom/resource/: fishbot_fourwheel_odom
src/fishbot_nav/: package.xml  setup.cfg  setup.py
src/fishbot_nav/config/: ekf.yaml  nav2_params.yaml
src/fishbot_nav/launch/: bringup.launch.py
src/fishbot_nav/resource/: fishbot_nav
src/fishbot_nav/urdf/: wheeled_gazebo.urdf
src/fishbot_nav_verification/: package.xml  setup.cfg  setup.py
src/fishbot_nav_verification/fishbot_nav_verification/: cmd_vel_logger.py  fake_imu_publisher.py  fake_laser_publisher.py  fake_odom_publisher.py  fake_ultrasonic_publisher.py
src/fishbot_nav_verification/launch/: nav_verification.launch.py  nav_verification_simple.launch.py
src/fishbot_navigation2/launch/: bringup_real.launch.py  navigation2.launch.py  navigation2_wheeled.launch.py
src/fishbot_navigation2/maps/: map.pgm  map.yaml
src/fishbot_navigation2/param/: wheeled.yaml  wheeled_real.yaml
src/ks136_ultrasonic/: package.xml  setup.cfg  setup.py
src/ks136_ultrasonic/ks136_ultrasonic/: node.py
src/ks136_ultrasonic/launch/: ks136_ultrasonic.launch.py
src/wheeled_robot_drivers/: package.xml  setup.cfg  setup.py
src/wheeled_robot_drivers/resource/: wheeled_robot_drivers
src/wheeled_robot_drivers/wheeled_robot_drivers/: imu_hda536t_node.py
src/wheeled_robot_drivers/wheeled_robot_drivers/launch/: hda536t_imu.launch.py
