[develop]
script_dir=$base/lib/fishbot_fourwheel_odom
[install]
install_scripts=$base/lib/fishbot_fourwheel_odom

[metadata]
name = fishbot_fourwheel_odom
version = 0.0.1
author = fishbot
license = Apache License 2.0
description = Four-wheel (left/right pair) differential odometry for Nav2.

[options]
packages = find:
install_requires =
    setuptools
zip_safe = false

[options.entry_points]
console_scripts =
    fourwheel_diff_odom = fishbot_fourwheel_odom.fourwheel_diff_odom_node:main
