<?xml version="1.0"?>
<package format="3">
  <name>fishbot_nav</name>
  <version>0.0.1</version>
  <description>Fishbot navigation stack (Nav2 + Lidar + IMU + Wheel Odom + Ultrasonic)</description>
  <maintainer email="you@example.com">fishbot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>robot_localization</depend>
  <depend>tf2_ros</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>rslidar_sdk</depend>
  <depend>wheeled_robot_drivers</depend>
  <depend>ks136_ultrasonic</depend>
  <depend>fishbot_fourwheel_odom</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
